--- a/results-incremental.html
+++ b/results-incremental.html
@@ -38,22 +38,24 @@
            <!--<div style="text-align:center;"><img src="/images/logo-100.png" /></div>-->
             <div id="startmessage">
                 <div class="logo-horiz"><img src="/images/axtime-logo-horizontal.png" alt="AXti.me Logo" /></div>
-                <p>
-                    Welcome you AXti.me Live Results!
-                </p>
-                <p>
-                    Here you can view lots of cool stuff:
-                    <ul>
-                        <li>Real-time results (Raw, Class and PAX)</li>
-                        <li>Complete driver details</li>
-                        <li>Top Times of Day</li>
-                        <li>Last 20 runs</li>
-                        <li>Search for a driver by car number</li>
-                    </ul>
-                </p>
-                <p>
-                    <a id="btn-hidemessage" data-role="button">Hide the above message</a>
-                </p>
+                <div  class="ui-content ui-body-a">
+                    <p>
+                        Welcome you AXti.me Live Results!
+                    </p>
+                    <p>
+                        Here you can view lots of cool stuff:
+                        <ul>
+                            <li>Real-time results (Raw, Class and PAX)</li>
+                            <li>Complete driver details</li>
+                            <li>Top Times of Day</li>
+                            <li>Last 20 runs</li>
+                            <li>Search for a driver by car number</li>
+                        </ul>
+                    </p>
+                    <p>
+                        <a id="btn-hidemessage" data-role="button">Hide the above message</a>
+                    </p>
+                </div>
             </div>
             <div id="resultspanel">
                 <p id="info" style="margin-top:4px;">Times automatically update!<br /> # of Runs: <strong><span id="results-runcount">-</span></strong> -  Updated: <strong><span id="results-lastupdated" class="lastpoll">-</span></strong> </p>
